--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "argon2": "^0.44.0",
+    "axios": "^1.13.5",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "jose": "^6.1.3",
     "mysql2": "^3.16.3",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
