--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jose": "^6.1.3",
     "mysql2": "^3.16.3",
     "next": "16.1.6",
+    "postgres": "^3.4.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
